force-app/main/default/objects/ServiceAppointment/fields/Appointment_Link__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id ,  AppointmentNumber , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Link</label>
    <type>Text</type>
</CustomField>