force-app/main/default/objects/ServiceAppointment/fields/Arrival_Time_String_c__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_String_c__c</fullName>
    <formula>TEXT(HOUR(Arrival_Time__c)) &amp; &quot;:&quot; &amp;
TEXT(MINUTE(Arrival_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival_Time_String__c</label>
    <type>Text</type>
</CustomField>