force-app/main/default/objects/ServiceAppointment/fields/Days_untill_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_untill_Event__c</fullName>
    <formula>DATEVALUE(SchedStartTime) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days untill Event</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>