force-app/main/default/objects/ServiceAppointment/fields/Filler_treatment_area__c.field-meta.xml
<CustomField>
    <fullName>Filler_treatment_area__c</fullName>
    <label>Filler Treatment areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheek</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Infraorbital</fullName>
            </value>
            <value>
                <fullName>Nasolabial Folds</fullName>
            </value>
            <value>
                <fullName>Perioral</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Temples</fullName>
            </value>
            <value>
                <fullName>Tear Trough</fullName>
            </value>
            <value>
                <fullName>Nose</fullName>
            </value>
            <value>
                <fullName>Jawline</fullName>
            </value>
            <value>
                <fullName>Upper Lip</fullName>
            </value>
            <value>
                <fullName>Lower Lip</fullName>
            </value>
            <value>
                <fullName>Full Lip</fullName>
            </value>
            <value>
                <fullName>Lip Lines</fullName>
            </value>
            <value>
                <fullName>Marionette Lines</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Butt</fullName>
            </value>
            <value>
                <fullName>Fat Pad</fullName>
            </value>
            <value>
                <fullName>Body Bella</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>