force-app/main/default/objects/ServiceAppointment/fields/IPL_Treatement_Area__c.field-meta.xml
<CustomField>
    <fullName>IPL_Treatement_Area__c</fullName>
    <label>IPL Treatment Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Upper Back</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Upper Legs</fullName>
            </value>
            <value>
                <fullName>Lower Legs</fullName>
            </value>
            <value>
                <fullName>Cherry Angiomas</fullName>
            </value>
            <value>
                <fullName>Broken Capillaries</fullName>
            </value>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Spot Treatments</fullName>
            </value>
            <value>
                <fullName>Upper Arms</fullName>
            </value>
            <value>
                <fullName>Lower Arms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>