force-app/main/default/objects/ServiceAppointment/fields/Laser_Hair_Treatment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Laser_Hair_Treatment_Areas__c</fullName>
    <label>Laser Hair Treatment Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upper Back</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Under Arms</fullName>
            </value>
            <value>
                <fullName>Upper Arms</fullName>
            </value>
            <value>
                <fullName>Lower Arms</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Lip</fullName>
            </value>
            <value>
                <fullName>Ear</fullName>
            </value>
            <value>
                <fullName>Full Face</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Bikini</fullName>
            </value>
            <value>
                <fullName>Upper Leg</fullName>
            </value>
            <value>
                <fullName>Lower Leg</fullName>
            </value>
            <value>
                <fullName>Front of Neck</fullName>
            </value>
            <value>
                <fullName>Back of Neck</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Happy Trail</fullName>
            </value>
            <value>
                <fullName>Glabella</fullName>
            </value>
            <value>
                <fullName>Sideburns</fullName>
            </value>
            <value>
                <fullName>Stomach</fullName>
            </value>
            <value>
                <fullName>Glutes/Buttocks</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>