force-app/main/default/objects/ServiceAppointment/fields/Room_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Room_Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Room__r.Id  ,  Room__r.Name , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Name Link</label>
    <type>Text</type>
</CustomField>