force-app/main/default/objects/ServiceAppointment/fields/SkinPen_Treatment_Areas__c.field-meta.xml
<CustomField>
    <fullName>SkinPen_Treatment_Areas__c</fullName>
    <label>SkinPen Treatment Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Stretch Marks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>