force-app/main/default/objects/ServiceAppointment/fields/Tattoo_Removal_Treatment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal_Treatment_Areas__c</fullName>
    <label>Tattoo Removal Treatment Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Upper Arm</fullName>
            </value>
            <value>
                <fullName>Lower Arm</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Upper Leg</fullName>
            </value>
            <value>
                <fullName>Lower Leg</fullName>
            </value>
            <value>
                <fullName>Upper Back</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>