force-app/main/default/objects/ServiceAppointment/fields/Treatment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Areas__c</fullName>
    <label>Treatment Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Back of Neck</fullName>
            </value>
            <value>
                <fullName>Bikini</fullName>
            </value>
            <value>
                <fullName>Body Bella</fullName>
            </value>
            <value>
                <fullName>Broken Capillaries</fullName>
            </value>
            <value>
                <fullName>Butt</fullName>
            </value>
            <value>
                <fullName>Calves</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Cheek</fullName>
            </value>
            <value>
                <fullName>Cherry Angiomas</fullName>
            </value>
            <value>
                <fullName>Chin</fullName>
            </value>
            <value>
                <fullName>Ear</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Flanks</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Front of Neck</fullName>
            </value>
            <value>
                <fullName>Full Face</fullName>
            </value>
            <value>
                <fullName>Full Lip</fullName>
            </value>
            <value>
                <fullName>Glabella</fullName>
            </value>
            <value>
                <fullName>Glutes</fullName>
            </value>
            <value>
                <fullName>Glutes/Buttocks</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Happy Trail</fullName>
            </value>
            <value>
                <fullName>Infraorbital</fullName>
            </value>
            <value>
                <fullName>Jawline</fullName>
            </value>
            <value>
                <fullName>Legs</fullName>
            </value>
            <value>
                <fullName>Lip</fullName>
            </value>
            <value>
                <fullName>Lip Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>