force-app/main/default/objects/ServiceAppointment/fields/Vanquish_Treatment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Vanquish_Treatment_Areas__c</fullName>
    <label>Vanquish Treatment Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Thighs</fullName>
            </value>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Flanks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>