force-app/main/default/objects/ServiceAppointment/fields/Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Name__c</fullName>
    <formula>WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type Name</label>
    <type>Text</type>
</CustomField>