force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Contact</columns>
    <columns>SchedStartTime</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>Status</columns>
    <columns>WorkType</columns>
    <columns>AdditionalInformation</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
</ListView>